# Brad_Search

./: .gitignore  Brad_Search.py  Brad_Search.spec  IS_Search.py  IS_Search.spec  requirements.txt
IS_Search_Rust/: Cargo.toml  README.md  build.rs
IS_Search_Rust/src/: main.rs
