[package]
name = "is_search"
version = "1.0.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
dirs = "5.0"
eframe = "0.29"
egui_extras = "0.29"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "ico"] }
open = "5.3"
regex = "1.11"
rfd = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.29"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem", "Win32_UI_Shell"] }

[build-dependencies]
winresource = "0.1"

[[bin]]
name = "IS_Search"
path = "src/main.rs"
